# my-dot-pi

./: .gitignore  README.md
agent/: .gitignore  AGENTS.md  keybindings.json  settings.json
agent/agents/: README.md
agent/npm/: .gitignore  package.json
agent/skills/brave-search/: .gitignore  SKILL.md  pnpm-lock.yaml  search.js
agent/skills/browser-tools/: .gitignore  SKILL.md  browser-connect.js  browser-content.js  browser-cookies.js  browser-eval.js  browser-nav.js  browser-pick.js  browser-screenshot.js  browser-start.js  browser-stop.js  pnpm-lock.yaml
agent/skills/env-info/: SKILL.md
agent/skills/frontend-design/: .gitignore
agent/skills/pdf/: .gitignore  SKILL.md  package.json  pnpm-lock.yaml  pyproject.toml
agent/skills/pptx/: .gitignore  SKILL.md  main.py  package.json  pyproject.toml
agent/skills/skill-creator/: .gitignore
agent/skills/skill-deps/: SKILL.md
agent/skills/tavily-search/: .gitignore  SKILL.md  pyproject.toml
agent/skills/xlsx/: SKILL.md  main.py  pyproject.toml
