[project]
name = "pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pypdf>=6.14.2",
    "pypdfium2>=5.10.1",
    "pytesseract>=0.3.13",
    "reportlab>=5.0.0",
]
